// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails to solve unresolvable tree 1`] = `[Error: Unable to resolve dependency graph for given manifest]`;

exports[`solves complex tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "d",
        "registry": "vba-blocks",
        "version": "^2",
      },
    ],
    "id": "a@1.2.0",
    "name": "a",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.2.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "c",
        "registry": "vba-blocks",
        "version": "^0.1.5",
      },
    ],
    "id": "b@1.1.0",
    "name": "b",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.1.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "f",
        "registry": "vba-blocks",
        "version": "^2",
      },
    ],
    "id": "d@2.0.0",
    "name": "d",
    "source": "registry+vba-blocks#<hash>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "g",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "f@2.0.0",
    "name": "f",
    "source": "registry+vba-blocks#<hash>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [],
    "id": "g@1.0.0",
    "name": "g",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.0.0",
  },
  Object {
    "dependencies": Array [],
    "id": "c@0.1.6",
    "name": "c",
    "source": "registry+vba-blocks#<hash>",
    "version": "0.1.6",
  },
]
`;

exports[`solves needs-sat tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "d",
        "registry": "vba-blocks",
        "version": "^1.2.0",
      },
    ],
    "id": "a@1.1.0",
    "name": "a",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.1.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "c",
        "registry": "vba-blocks",
        "version": "^0.1.0",
      },
    ],
    "id": "b@1.0.0",
    "name": "b",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.0.0",
  },
  Object {
    "dependencies": Array [],
    "id": "c@0.1.0",
    "name": "c",
    "source": "registry+vba-blocks#<hash>",
    "version": "0.1.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "f",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "d@1.2.0",
    "name": "d",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.2.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "g",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "f@1.0.0",
    "name": "f",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.0.0",
  },
  Object {
    "dependencies": Array [],
    "id": "g@1.0.0",
    "name": "g",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.0.0",
  },
]
`;

exports[`solves simple tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "d",
        "registry": "vba-blocks",
        "version": "^2",
      },
    ],
    "id": "a@1.2.0",
    "name": "a",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.2.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "f",
        "registry": "vba-blocks",
        "version": "^2",
      },
    ],
    "id": "d@2.0.0",
    "name": "d",
    "source": "registry+vba-blocks#<hash>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "g",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "f@2.0.0",
    "name": "f",
    "source": "registry+vba-blocks#<hash>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [],
    "id": "g@1.0.0",
    "name": "g",
    "source": "registry+vba-blocks#<hash>",
    "version": "1.0.0",
  },
]
`;
